# pypi_package_tutorial

./: README.md
PyPi_package/: README.md  check.py  pyproject.toml  todo.txt
PyPi_package/src/emcee_package/: __init__.py  cpp_bindings.py  cpp_greetings.cpp  py_greetings.py
